<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/subtotal_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/subtotal_title"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotal_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_title_text" />

    <Button
        android:id="@+id/title_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc1"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_count" />

    <Button
        android:id="@+id/title_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc2"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button1"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_count" />

    <Button
        android:id="@+id/title_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc3"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button2"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_count" />

    <Button
        android:id="@+id/title_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc4"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_button1" />

    <Button
        android:id="@+id/title_button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc6"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button5"
        app:layout_constraintTop_toBottomOf="@+id/title_button3" />

    <Button
        android:id="@+id/title_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc5"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button4"
        app:layout_constraintTop_toBottomOf="@+id/title_button2" />

    <Button
        android:id="@+id/title_button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc9"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button8"
        app:layout_constraintTop_toBottomOf="@+id/title_button6" />

    <Button
        android:id="@+id/title_button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc8"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_button7"
        app:layout_constraintTop_toBottomOf="@+id/title_button5" />

    <Button
        android:id="@+id/title_button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc7"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toStartOf="@+id/title_button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_button4" />

    <ImageButton
        android:id="@+id/backspace_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#BCBCBC"
        app:layout_constraintEnd_toEndOf="@+id/title_button7"
        app:layout_constraintStart_toStartOf="@+id/title_button7"
        app:layout_constraintTop_toTopOf="@+id/title_button0"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <Button
        android:id="@+id/title_button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#BCBCBC"
        android:text="@string/calc0"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="@+id/title_button8"
        app:layout_constraintStart_toStartOf="@+id/title_button8"
        app:layout_constraintTop_toBottomOf="@+id/title_button8" />

    <ImageButton
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#BCBCBC"
        app:layout_constraintBottom_toBottomOf="@+id/title_button0"
        app:layout_constraintEnd_toEndOf="@+id/title_button9"
        app:layout_constraintStart_toStartOf="@+id/title_button9"
        app:layout_constraintTop_toTopOf="@+id/title_button0"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</androidx.constraintlayout.widget.ConstraintLayout>